# lab

./: .gitignore  .gitmodules  .lab-config.example  ARCHITECTURE.md  BUILD.md  Cargo.toml  README.md  __init__.py  blender_manifest.toml  download_wheels.ps1  esbuild.config.mjs  manifest.json  package-lock.json  package.json  preferences.py  pyrightconfig.json  seed_5.0.blend  shell.nix  styles.css  test_architecture.py  test_missing_detection.py  test_path_handling.py  tsconfig.json  update-blender-view-renderer.ps1  utils.py  versions.json
.claude/: settings.json  settings.local.json
blender/parsers/blendfile/: Cargo.toml  README.md
blender/parsers/blendfile/crates/blendfile_dev/: Cargo.toml
blender/parsers/blendfile/crates/blendfile_dev/src/: lib.rs  main.rs
blender/parsers/blendfile/docs/: TESTING.md
blender/parsers/blendfile/src/: block.rs  endian.rs  header_decode.rs  id.rs  layout.rs  lib.rs  member.rs  pointer.rs  registry.rs  transform.rs  types.rs
blender/parsers/dot001/crates/dot001_cli/: Cargo.toml
blender/parsers/dot001/crates/dot001_cli/src/: block_display.rs  block_ops.rs  block_utils.rs  output_utils.rs  util.rs
blender/parsers/dot001/crates/dot001_events/: Cargo.toml
blender/parsers/dot001/crates/dot001_events/src/: error.rs  event.rs  lib.rs
blender/parsers/dot001/crates/dot001_watcher/: Cargo.toml
blender/parsers/dot001/crates/dot001_watcher/src/: lib.rs  normalizer.rs
blender/parsers/dot001/crates/dot001_watcher/tests/: integration.rs
blender/parsers/dot001/crates/dot001_writer/: Cargo.toml
blender/parsers/dot001/crates/dot001_writer/src/: emitter.rs  exhaustive_tracer.rs  expanded_injection.rs  lib.rs
crates/bllink-cli/: Cargo.toml
crates/bllink-cli/src/: diff_formatter.rs  main.rs
crates/bllink-parser/: Cargo.toml
crates/bllink-parser/src/: block.rs  dna.rs  error.rs  fields.rs  lib.rs
crates/bllink-tracer/: Cargo.toml
crates/bllink-tracer/src/: expanders.rs  lib.rs  name_resolver.rs
crates/bllink-tracer/src/expanders/: cache_file.rs  collection.rs  data_block.rs  image.rs  lamp.rs  library.rs  material.rs  mesh.rs  mod.rs  node_tree.rs  object.rs  scene.rs  sound.rs  texture.rs
crates/dot001-checkpoint/: Cargo.toml
crates/dot001-checkpoint/src/: lib.rs
crates/dot001-cli/: Cargo.toml
crates/dot001-cli/src/: block_display.rs  block_ops.rs  block_utils.rs  diff_formatter.rs  main.rs  output_utils.rs  util.rs
crates/dot001-cli/src/commands/: blocks.rs  dependencies.rs  diff.rs  filter.rs  info.rs  liblink.rs  libpath.rs  mesh_diff.rs  mod.rs  reconstruct_link.rs  rename.rs
crates/dot001-diff/: Cargo.toml
crates/dot001-diff/src/: diff_engine.rs  lib.rs  policies.rs  provenance.rs
crates/dot001-editor/: Cargo.toml
crates/dot001-editor/src/: lib.rs
crates/dot001-editor/src/commands/: libpath.rs  rename.rs
crates/dot001-error/: Cargo.toml
crates/dot001-error/src/: conversions.rs  helpers.rs  kinds.rs  lib.rs
crates/dot001-parser/: Cargo.toml
crates/dot001-parser/src/: block.rs  compression.rs  dna.rs  error.rs  fields.rs  header.rs  lib.rs  policy.rs
crates/dot001-tracer/: Cargo.toml
crates/dot001-tracer/src/: bpath.rs  determinizer.rs  expand_result.rs  expander_macro.rs  filter.rs  lib.rs  name_resolver.rs
crates/dot001-tracer/src/core/: mod.rs  options.rs  tree.rs
crates/dot001-tracer/src/expanders/: cache_file.rs  collection.rs  data_block.rs  image.rs  lamp.rs  library.rs  material.rs  material_macro.rs  mesh.rs  mod.rs  node_tree.rs  object.rs  object_macro.rs  scene.rs  scene_macro.rs  sound.rs  texture.rs
crates/dot001-tracer/src/expanders/basic/: scene.rs
crates/dot001-tracer/src/expanders/macros/: generators.rs
crates/dot001-tracer/src/utils/: name_resolver.rs
crates/dot001-tracer/tests/: bpath.rs  bpathlib_extra.rs  expander_integration.rs
crates/dot001-writer/: Cargo.toml
crates/dot001-writer/examples/: safe_injection_test.rs  simple_injection_test.rs
crates/dot001-writer/src/: dna_provider.rs  emitter.rs  lib.rs
crates/dot001_checkpoint/: Cargo.toml
crates/dot001_dev/: Cargo.toml
crates/dot001_dev/src/: main.rs
crates/dot001_diff/: Cargo.toml
crates/dot001_diff/src/: diff_engine.rs  lib.rs  policies.rs  provenance.rs
crates/dot001_editor/: Cargo.toml
crates/dot001_editor/src/: lib.rs
crates/dot001_editor/src/commands/: libpath.rs  mod.rs  rename.rs
crates/dot001_parser/: Cargo.toml
crates/dot001_parser/src/: block.rs  buf.rs  compact_dna.rs  compression.rs  dna.rs  fields.rs  fieldview.rs  header.rs  index.rs  lib.rs  name_resolver.rs  reflect.rs  scan.rs
crates/dot001_tracer/: Cargo.toml
crates/dot001_tracer/src/: filter.rs  lib.rs  thread_safe_expander.rs  thread_safe_macros.rs
crates/dot001_tracer/src/core/: mod.rs  parallel_tracer.rs  tracer.rs  tree.rs
crates/dot001_tracer/src/expanders/: cache_file.rs  group.rs  image.rs  lamp.rs  library.rs  material.rs  mesh.rs  mod.rs  sound.rs
crates/dot001_tracer/src/expanders/basic/: collection.rs  data_block.rs  lamp.rs  mesh.rs  mod.rs  object_macro.rs  scene_macro.rs  texture.rs
crates/dot001_tracer/src/expanders/macros/: generators.rs  mod.rs
crates/dot001_tracer/src/expanders/thread_safe/: group.rs  material.rs  mesh.rs  mod.rs  object.rs  scene.rs
crates/dot001_tracer/src/utils/: bpath.rs  determinizer.rs  mod.rs  name_resolver.rs
crates/dot001_tracer/tests/: bpath.rs  expander_integration.rs
crates/dot001_watcher/: Cargo.toml
crates/dot001_watcher/examples/: async_watcher_demo.rs
crates/dot001_watcher/src/: async_watcher.rs  dir_emit.rs  lib.rs
crates/dot001_writer/: Cargo.toml
crates/dot001_writer/examples/: experimental_exhaustive_injection.rs  injection_test.rs  safe_injection_test.rs  simple_injection_test.rs
crates/dot001_writer/src/: dna_provider.rs  emitter.rs  exhaustive_tracer.rs  expanded_injection.rs  header_writer.rs  lib.rs  safe_injection.rs
lib/: Cargo.toml
lib/src/: lib.rs
scripts/templates/template-projects/rust-nix-template/: Cargo.toml  README.md
scripts/templates/template-projects/rust-nix-template/nix/modules/: devshell.nix  rust.nix
(+394 files in other folders)
