[package]
name = "blendreader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
zstd = "0.13"
rayon = "1"
walkdir = "2"
flate2 = { version = "1", default-features = false, features = ["zlib"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
