[package]
name = "blendreader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
zstd = "0"
rayon = "1"
walkdir = "2"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
