[package]
name = "dot001"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dot001_parser = { path = "../crates/dot001_parser" }
dot001_tracer = { path = "../crates/dot001_tracer" }
dot001_error = { path = "../crates/dot001_error" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false
path = "../benches/parser_bench.rs"

[[bench]]
name = "tracer_bench"
harness = false
path = "../benches/tracer_bench.rs"
