[package]
name = "bllink-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bllink-tracer = { path = "../bllink-tracer" }
bllink-diff = { path = "../bllink-diff" }
bllink-parser = { path = "../bllink-parser" }
bllink-editor = { path = "../bllink-editor" }
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.142"
text_trees = "0.1.2"
