[package]
name = "dot001-cli"
version = "0.1.0"
edition = "2021"
license = "gpl-3.0-or-later"
authors = ["Albert O'Shea"]

[dependencies]
dot001-tracer = { path = "../dot001-tracer", optional = true }
dot001-diff = { path = "../dot001-diff", optional = true }
dot001-parser = { path = "../dot001-parser" }
dot001-editor = { path = "../dot001-editor", optional = true }
dot001-error = { path = "../dot001-error" }
clap = { version = "4.5.42", features = ["derive"] }
anyhow = "1"
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.142"
text_trees = "0.1.2"

[features]
default = ["info", "blocks", "trace", "diff", "editor"]
info = []
blocks = []
trace = ["dep:dot001-tracer"]
diff = ["trace", "dep:dot001-diff"]
editor = ["dep:dot001-editor"]
