[package]
name = "dot001-cli"
version = "0.1.0"
edition = "2024"
license = "gpl-3.0-or-later"
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[dependencies]
dot001-tracer = { path = "../dot001-tracer", optional = true }
dot001-diff = { path = "../dot001-diff", optional = true }
dot001-parser = { path = "../dot001-parser" }
dot001-editor = { path = "../dot001-editor", optional = true }
dot001-error = { path = "../dot001-error" }
dot001-writer = { path = "../dot001-writer" }
dot001-watcher = { path = "../dot001-watcher", optional = true }
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
serde_json = "1.0.142"
text_trees = "0.1"
owo-colors = "4.1"
regex = "1.11.1"
isatty = "0.1"

[features]
default = ["info", "blocks", "trace"]
info = []
blocks = []
trace = ["dep:dot001-tracer"]
diff = ["trace", "dep:dot001-diff", "dot001-diff/tracer_integration"]
editor = ["dep:dot001-editor", "dot001-editor/tracer_integration"]
watch = ["dep:dot001-watcher"]
