[package]
name = "dot001-diff"
version = "0.1.0"
edition = "2021"
description = "Binary diffing engine for Blender .blend files"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
keywords = ["blender", "blend", "diff", "binary", "3d"]
categories = ["multimedia", "graphics"]

[dependencies]
dot001-parser = { path = "../dot001-parser" }
bdiff = "0.1.0"
log = "0.4.27"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
