[package]
name = "dot001-diff"
version = "0.1.0"
edition = "2021"
description = "Binary diffing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "diff", "binary", "3d"]
categories = ["multimedia", "graphics"]
authors = ["Albert O'Shea"]

[dependencies]
dot001-parser = { path = "../dot001-parser" }
dot001-tracer = { path = "../dot001-tracer" }
bdiff = "0.1.0"
blake3 = "1.5"
hex = "0.4"
log = "0.4.27"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
