[package]
name = "dot001-diff"
version = "0.1.0"
edition = "2024"
description = "Binary diffing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "diff", "binary", "3d"]
categories = ["multimedia", "graphics"]
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[dependencies]
dot001-parser = { path = "../dot001-parser" }
dot001-tracer = { path = "../dot001-tracer", optional = true }
dot001-error = { path = "../dot001-error" }
bdiff = "0.1.0"
blake3 = "1.8.2"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["serde"]
tracer_integration = ["dep:dot001-tracer"]
serde = ["dep:serde"]
