[package]
name = "dot001-editor"
version = "0.1.0"
edition = "2021"
license = "gpl-3.0-or-later"
authors = ["Albert O'Shea"]

[dependencies]
dot001-parser = { path = "../dot001-parser" }
dot001-tracer = { path = "../dot001-tracer", optional = true }
dot001-error = { path = "../dot001-error" }
thiserror = "2.0"
log = "0.4"

[features]
default = ["tracer_integration"]
tracer_integration = ["dep:dot001-tracer"]
