[package]
name = "dot001-parser"
version = "0.1.0"
edition = "2021"
description = "Low-level parsing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "parser", "graphics", "3d"]
categories = ["multimedia", "parser-implementations", "graphics"]
authors = ["Albert O'Shea"]

[dependencies]
log = "0.4.27"
thiserror = "2.0.12"
zstd = { version = "0.13", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = "3.0"
twox-hash = "1.6"

[features]
default = ["zstd", "mmap"]
zstd = ["dep:zstd"]
mmap = ["dep:memmap2"]
