[package]
name = "dot001-tracer"
version = "0.1.0"
edition = "2024"
description = "Dependency tracing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "dependencies", "tracing", "3d"]
categories = ["multimedia", "graphics"]
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
dot001-parser = { path = "../dot001-parser" }
dot001-error = { path = "../dot001-error" }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
regex = "1"
pathdiff = "0.2"
