[package]
name = "dot001-writer"
version = "0.1.0"
edition = "2024"
license = "gpl-3.0-or-later"
authors = ["Albert O'Shea"]

[dependencies]
dot001-parser = { path = "../dot001-parser" }
dot001-error = { path = "../dot001-error" }
dot001-tracer = { path = "../dot001-tracer" }
log = "0.4"

[features]
default = []
