[package]
name = "dot001_checkpoint"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Checkpointing library for Blender projects using titor"
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"

[dependencies]
titor = "0.2.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.0"
