[package]
name = "dot001_diff"
version = "0.1.0"
edition = "2024"
description = "Binary diffing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "diff", "binary", "3d"]
categories = ["multimedia", "graphics"]
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[dependencies]
dot001_parser = { path = "../dot001_parser" }
dot001_tracer = { path = "../dot001_tracer", optional = true }
dot001_error = { path = "../dot001_error" }
dot001_events = { path = "../dot001_events" }
tokio = { version = "1.47", features = ["rt"] }
bdiff = "0.1.0"
blake3 = "1.8.2"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["serde"]
tracer_integration = ["dep:dot001_tracer"]
serde = ["dep:serde"]
