[package]
name = "dot001_parser"
version = "0.1.0"
edition = "2024"
description = "Low-level parsing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "parser", "graphics", "3d"]
categories = ["multimedia", "parser-implementations", "graphics"]
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[dependencies]
dot001_error = { path = "../dot001_error" }
log = "0.4"
zstd = { version = "0.13", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = "3.0"
twox-hash = "2.1"

[features]
default = ["zstd", "mmap"]
zstd = ["dep:zstd"]
mmap = ["dep:memmap2"]
