[package]
name = "dot001_parser"
version = "0.1.0"
edition = "2024"
description = "Low-level parsing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "parser", "graphics", "3d"]
categories = ["multimedia", "parser-implementations", "graphics"]
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[dependencies]
dot001_events = { path = "../dot001_events" }
tokio = { version = "1.47", features = ["rt"] }
log = "0.4"
zstd = { version = "0.13", optional = true }
memmap2 = { version = "0.9", optional = true }
tempfile = "3.20"
twox-hash = "2.1"
bytes = "1.10.1"
ahash = "0.8.12"
bytemuck = { version = "1.23.1", features = ["derive"], optional = true }
rayon = { version = "1.10.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[features]
default = ["zstd", "mmap"]
zstd = ["dep:zstd"]
mmap = ["dep:memmap2"]
bytemuck = ["dep:bytemuck"]
rayon = ["dep:rayon"]
dashmap = ["dep:dashmap"]
tracing = ["dep:tracing"]
