[package]
name = "dot001_tracer"
version = "0.1.0"
edition = "2024"
description = "Dependency tracing engine for Blender .blend files"
license = "gpl-3.0-or-later"
readme = "../../README.md"
keywords = ["blender", "blend", "dependencies", "tracing", "3d"]
categories = ["multimedia", "graphics"]
authors = ["Albert O'Shea"]
repository = "https://github.com/Alb-O/dot001"


[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
dot001_parser = { path = "../dot001_parser" }
dot001_error = { path = "../dot001_error" }
dot001_events = { path = "../dot001_events" }
tokio = { version = "1.47", features = ["rt"] }
log = "0.4"
serde = { version = "1.0.219", features = ["derive"], optional = true }
regex = "1.11.1"
pathdiff = "0.2"
