[package]
name = "dot001_watcher"
version = "0.1.0"
edition = "2024"
license = "gpl-3.0-or-later"
description = "Recursive watcher for .blend files and directories in the dot001 ecosystem"
readme = "../../README.md"
keywords = ["blender", "blend", "watcher", "filesystem", "3d"]
categories = ["multimedia", "graphics", "filesystem"]
repository = "https://github.com/Alb-O/dot001"
authors = ["Albert O'Shea"]

[features]
default = []
tokio = ["dep:tokio", "dep:futures"]

[dependencies]
notify = "8.2.0"
crossbeam-channel = "0.5.15"
lru = "0.16.0"
cfg-if = "1.0"
thiserror = "2.0.12"
log = "0.4"

# Optional async support
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
env_logger = "0.11.8"
