[package]
name = "dot001_watcher"
version = "0.1.0"
edition = "2024"
license = "gpl-3.0-or-later"
description = "Recursive watcher for .blend files and directories in the dot001 ecosystem"
readme = "../../README.md"
keywords = ["blender", "blend", "watcher", "filesystem", "3d"]
categories = ["multimedia", "graphics", "filesystem"]
repository = "https://github.com/Alb-O/dot001"
authors = ["Albert O'Shea"]

[features]
default = []
tokio = ["dep:tokio", "dep:futures"]
async-events = [
    "tokio",
    "dep:dot001_events",
    "dep:dot001_tracer",
    "dep:dot001_parser",
    "dep:uuid",
]

[dependencies]
notify = "8.2.0"
crossbeam-channel = "0.5.15"
lru = "0.16.0"
cfg-if = "1.0"
thiserror = "2.0.12"
log = "0.4"

# Optional async support
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "signal",
], optional = true }
futures = { version = "0.3", optional = true }

# Optional dot001_events integration
dot001_events = { path = "../dot001_events", optional = true }
dot001_tracer = { path = "../dot001_tracer", optional = true }
dot001_parser = { path = "../dot001_parser", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
env_logger = "0.11.8"
async-trait = "0.1"
