[package]
name = "blendfile"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Strongly-typed .blend file data model (SDNA, BHead, blocks, pointers, IDs) for thread-safe parsers/editors"
repository = ""

[lib]
name = "blendfile"
path = "src/lib.rs"

[features]
serde = ["dep:serde", "dep:serde_repr"]

[workspace]
members = [".", "crates/blendfile_dev"]

[dependencies]
ahash = "0.8"
dashmap = { version = "7.0.0-rc2", default-features = false, features = [
    "serde",
] }
smallvec = "2.0.0-alpha.11"
bitflags = "2.9"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }
