[package]
authors = ["{{author}} <{{author-email}}>"]
edition = "2021"
# Package name automatically managed by template variables
name = "{{package-name}}"
description = "{{description}}"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
