[package]
name = "blendfile_dev"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blendfiles_downloader"
path = "src/bin/blendfiles_downloader.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
indicatif = "0.17"
env_logger = "0.11"

tokio = { version = "1", optional = true }
