[package]
name = "dot001_events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Albert O'Shea"]
description = "Async event and error hub for the dot001 toolkit"
keywords = ["blender", "blend", "events", "3d", "async"]
categories = ["development-tools", "graphics"]
repository = "https://github.com/Alb-O/dot001"

[dependencies]
thiserror = "2.0"
tokio = { version = "1.47", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
once_cell = "1.21"
async-trait = "0.1"
colored = "2.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
tracing = ["dep:tracing"]

[dependencies.tracing]
version = "0.1"
optional = true
